<resources>
    <string name="app_name">NBA Teams TheScore</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">apply</string>
    <string name="exit_info">You are about to exit</string>
    <string name="exit">exit</string>
    <string name="exit_notification">Notice</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="main_menu_txt">NBA teams list</string>
    <string name="players_list">NBA players list</string>
    <string name="sort_by_losses">sort by losses</string>
    <string name="sort_by_wins">sort by wins</string>
    <string name="reset">reset</string>
    <string name="team_wins">team wins:</string>
    <string name="team_losses">team losses:</string>

</resources>
