<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/medium_light_gray"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beautiful_green">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolBarStyle">

            <TextView
                android:id="@+id/toolBarTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/players_list"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin">

                <ImageView
                    android:id="@+id/team_logo"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/team_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/team_logo"
                    android:textSize="25sp"
                    />

                <TextView
                    android:id="@+id/winsTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/team_name"
                    android:layout_toEndOf="@+id/team_logo"
                    android:text="@string/team_wins"
                    />

                <TextView
                    android:id="@+id/team_wins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/team_name"
                    android:layout_marginStart="2dp"
                    android:layout_toEndOf="@+id/winsTV"
                    android:textColor="@color/beautiful_green"
                    />


                <TextView
                    android:id="@+id/lossesTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/team_name"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/team_wins"
                    android:text="@string/team_losses"
                    />

                <TextView
                    android:id="@+id/team_losses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_below="@+id/team_name"
                    android:layout_toEndOf="@+id/lossesTV"
                    android:textColor="@color/red_error"
                    />

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            style="@style/RecyclerStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="none"/>

    </LinearLayout>
</LinearLayout>
